src/GrammaireParser.java
// $ANTLR 3.5.2 Grammaire.g 2021-03-23 23:46:44

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class GrammaireParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFFECT", "AS", "ATOMID", "BLOCK", 
		"CLASS", "CLASSBLOCK", "CLASSID", "CONSTRUCTOR", "ELSE", "EXPR", "FORMALPARAM", 
		"ID", "IF", "INSTANCIATION", "INSTEXPR", "INSTRUCTION", "INTEGER", "LOCALVARIABLE", 
		"LOCALVARIABLEINIT", "MESSAGE", "METHODE", "METHODEPARAM", "MULTICOMMENT", 
		"NORMALCOMMENT", "RETURN", "ROOT", "SELECTION", "SIGNEDINTEGER", "STRING", 
		"THEN", "VARIABLECLASSE", "VARIABLECLASSEINIT", "WHILE", "WS", "'&'", 
		"'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "':='", 
		"';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'as'", "'class'", 
		"'def'", "'do'", "'else'", "'extends'", "'if'", "'is'", "'new'", "'override'", 
		"'return'", "'static'", "'then'", "'var'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int AFFECT=4;
	public static final int AS=5;
	public static final int ATOMID=6;
	public static final int BLOCK=7;
	public static final int CLASS=8;
	public static final int CLASSBLOCK=9;
	public static final int CLASSID=10;
	public static final int CONSTRUCTOR=11;
	public static final int ELSE=12;
	public static final int EXPR=13;
	public static final int FORMALPARAM=14;
	public static final int ID=15;
	public static final int IF=16;
	public static final int INSTANCIATION=17;
	public static final int INSTEXPR=18;
	public static final int INSTRUCTION=19;
	public static final int INTEGER=20;
	public static final int LOCALVARIABLE=21;
	public static final int LOCALVARIABLEINIT=22;
	public static final int MESSAGE=23;
	public static final int METHODE=24;
	public static final int METHODEPARAM=25;
	public static final int MULTICOMMENT=26;
	public static final int NORMALCOMMENT=27;
	public static final int RETURN=28;
	public static final int ROOT=29;
	public static final int SELECTION=30;
	public static final int SIGNEDINTEGER=31;
	public static final int STRING=32;
	public static final int THEN=33;
	public static final int VARIABLECLASSE=34;
	public static final int VARIABLECLASSEINIT=35;
	public static final int WHILE=36;
	public static final int WS=37;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammaireParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammaireParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return GrammaireParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Grammaire.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Grammaire.g:9:1: program : declaration -> ^( ROOT declaration ) ;
	public final GrammaireParser.program_return program() throws RecognitionException {
		GrammaireParser.program_return retval = new GrammaireParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope declaration1 =null;

		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			// Grammaire.g:9:9: ( declaration -> ^( ROOT declaration ) )
			// Grammaire.g:9:11: declaration
			{
			pushFollow(FOLLOW_declaration_in_program104);
			declaration1=declaration();
			state._fsp--;

			stream_declaration.add(declaration1.getTree());
			// AST REWRITE
			// elements: declaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 9:23: -> ^( ROOT declaration )
			{
				// Grammaire.g:9:26: ^( ROOT declaration )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				adaptor.addChild(root_1, stream_declaration.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// Grammaire.g:11:1: declaration : ( classe )* block -> ( classe )* block ;
	public final GrammaireParser.declaration_return declaration() throws RecognitionException {
		GrammaireParser.declaration_return retval = new GrammaireParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope classe2 =null;
		ParserRuleReturnScope block3 =null;

		RewriteRuleSubtreeStream stream_classe=new RewriteRuleSubtreeStream(adaptor,"rule classe");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");

		try {
			// Grammaire.g:11:13: ( ( classe )* block -> ( classe )* block )
			// Grammaire.g:11:15: ( classe )* block
			{
			// Grammaire.g:11:15: ( classe )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==57) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Grammaire.g:11:16: classe
					{
					pushFollow(FOLLOW_classe_in_declaration121);
					classe2=classe();
					state._fsp--;

					stream_classe.add(classe2.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_block_in_declaration125);
			block3=block();
			state._fsp--;

			stream_block.add(block3.getTree());
			// AST REWRITE
			// elements: classe, block
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 11:31: -> ( classe )* block
			{
				// Grammaire.g:11:34: ( classe )*
				while ( stream_classe.hasNext() ) {
					adaptor.addChild(root_0, stream_classe.nextTree());
				}
				stream_classe.reset();

				adaptor.addChild(root_0, stream_block.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class classe_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "classe"
	// Grammaire.g:14:1: classe : 'class' name= CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' superc= CLASSID )? 'is' classBlock -> ^( CLASS $name ( formalParam )* ( $superc)? classBlock ) ;
	public final GrammaireParser.classe_return classe() throws RecognitionException {
		GrammaireParser.classe_return retval = new GrammaireParser.classe_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token name=null;
		Token superc=null;
		Token string_literal4=null;
		Token char_literal5=null;
		Token char_literal7=null;
		Token char_literal9=null;
		Token string_literal10=null;
		Token string_literal11=null;
		ParserRuleReturnScope formalParam6 =null;
		ParserRuleReturnScope formalParam8 =null;
		ParserRuleReturnScope classBlock12 =null;

		Object name_tree=null;
		Object superc_tree=null;
		Object string_literal4_tree=null;
		Object char_literal5_tree=null;
		Object char_literal7_tree=null;
		Object char_literal9_tree=null;
		Object string_literal10_tree=null;
		Object string_literal11_tree=null;
		RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleTokenStream stream_CLASSID=new RewriteRuleTokenStream(adaptor,"token CLASSID");
		RewriteRuleSubtreeStream stream_formalParam=new RewriteRuleSubtreeStream(adaptor,"rule formalParam");
		RewriteRuleSubtreeStream stream_classBlock=new RewriteRuleSubtreeStream(adaptor,"rule classBlock");

		try {
			// Grammaire.g:14:8: ( 'class' name= CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' superc= CLASSID )? 'is' classBlock -> ^( CLASS $name ( formalParam )* ( $superc)? classBlock ) )
			// Grammaire.g:14:10: 'class' name= CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' superc= CLASSID )? 'is' classBlock
			{
			string_literal4=(Token)match(input,57,FOLLOW_57_in_classe142);  
			stream_57.add(string_literal4);

			name=(Token)match(input,CLASSID,FOLLOW_CLASSID_in_classe146);  
			stream_CLASSID.add(name);

			char_literal5=(Token)match(input,39,FOLLOW_39_in_classe148);  
			stream_39.add(char_literal5);

			// Grammaire.g:14:35: ( formalParam ( ',' formalParam )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID||LA3_0==69) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// Grammaire.g:14:36: formalParam ( ',' formalParam )*
					{
					pushFollow(FOLLOW_formalParam_in_classe151);
					formalParam6=formalParam();
					state._fsp--;

					stream_formalParam.add(formalParam6.getTree());
					// Grammaire.g:14:48: ( ',' formalParam )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==43) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// Grammaire.g:14:49: ',' formalParam
							{
							char_literal7=(Token)match(input,43,FOLLOW_43_in_classe154);  
							stream_43.add(char_literal7);

							pushFollow(FOLLOW_formalParam_in_classe156);
							formalParam8=formalParam();
							state._fsp--;

							stream_formalParam.add(formalParam8.getTree());
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			char_literal9=(Token)match(input,40,FOLLOW_40_in_classe163);  
			stream_40.add(char_literal9);

			// Grammaire.g:14:74: ( 'extends' superc= CLASSID )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==61) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// Grammaire.g:14:75: 'extends' superc= CLASSID
					{
					string_literal10=(Token)match(input,61,FOLLOW_61_in_classe166);  
					stream_61.add(string_literal10);

					superc=(Token)match(input,CLASSID,FOLLOW_CLASSID_in_classe170);  
					stream_CLASSID.add(superc);

					}
					break;

			}

			string_literal11=(Token)match(input,63,FOLLOW_63_in_classe174);  
			stream_63.add(string_literal11);

			pushFollow(FOLLOW_classBlock_in_classe176);
			classBlock12=classBlock();
			state._fsp--;

			stream_classBlock.add(classBlock12.getTree());
			// AST REWRITE
			// elements: superc, formalParam, classBlock, name
			// token labels: name, superc
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
			RewriteRuleTokenStream stream_superc=new RewriteRuleTokenStream(adaptor,"token superc",superc);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 15:2: -> ^( CLASS $name ( formalParam )* ( $superc)? classBlock )
			{
				// Grammaire.g:15:4: ^( CLASS $name ( formalParam )* ( $superc)? classBlock )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASS, "CLASS"), root_1);
				adaptor.addChild(root_1, stream_name.nextNode());
				// Grammaire.g:15:18: ( formalParam )*
				while ( stream_formalParam.hasNext() ) {
					adaptor.addChild(root_1, stream_formalParam.nextTree());
				}
				stream_formalParam.reset();

				// Grammaire.g:15:32: ( $superc)?
				if ( stream_superc.hasNext() ) {
					adaptor.addChild(root_1, stream_superc.nextNode());
				}
				stream_superc.reset();

				adaptor.addChild(root_1, stream_classBlock.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "classe"


	public static class classBlock_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "classBlock"
	// Grammaire.g:18:1: classBlock : '{' ( variableClasse )* ( affect )* constructor ( methode )* '}' -> ^( CLASSBLOCK constructor ( variableClasse )* ( methode )* ( affect )* ) ;
	public final GrammaireParser.classBlock_return classBlock() throws RecognitionException {
		GrammaireParser.classBlock_return retval = new GrammaireParser.classBlock_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal13=null;
		Token char_literal18=null;
		ParserRuleReturnScope variableClasse14 =null;
		ParserRuleReturnScope affect15 =null;
		ParserRuleReturnScope constructor16 =null;
		ParserRuleReturnScope methode17 =null;

		Object char_literal13_tree=null;
		Object char_literal18_tree=null;
		RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
		RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
		RewriteRuleSubtreeStream stream_methode=new RewriteRuleSubtreeStream(adaptor,"rule methode");
		RewriteRuleSubtreeStream stream_variableClasse=new RewriteRuleSubtreeStream(adaptor,"rule variableClasse");
		RewriteRuleSubtreeStream stream_affect=new RewriteRuleSubtreeStream(adaptor,"rule affect");
		RewriteRuleSubtreeStream stream_constructor=new RewriteRuleSubtreeStream(adaptor,"rule constructor");

		try {
			// Grammaire.g:18:12: ( '{' ( variableClasse )* ( affect )* constructor ( methode )* '}' -> ^( CLASSBLOCK constructor ( variableClasse )* ( methode )* ( affect )* ) )
			// Grammaire.g:18:14: '{' ( variableClasse )* ( affect )* constructor ( methode )* '}'
			{
			char_literal13=(Token)match(input,71,FOLLOW_71_in_classBlock205);  
			stream_71.add(char_literal13);

			// Grammaire.g:18:18: ( variableClasse )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==69) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// Grammaire.g:18:18: variableClasse
					{
					pushFollow(FOLLOW_variableClasse_in_classBlock207);
					variableClasse14=variableClasse();
					state._fsp--;

					stream_variableClasse.add(variableClasse14.getTree());
					}
					break;

				default :
					break loop5;
				}
			}

			// Grammaire.g:18:34: ( affect )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==CLASSID||LA6_0==ID||LA6_0==INTEGER||LA6_0==STRING||LA6_0==39||LA6_0==42||LA6_0==44||LA6_0==64) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// Grammaire.g:18:34: affect
					{
					pushFollow(FOLLOW_affect_in_classBlock210);
					affect15=affect();
					state._fsp--;

					stream_affect.add(affect15.getTree());
					}
					break;

				default :
					break loop6;
				}
			}

			pushFollow(FOLLOW_constructor_in_classBlock213);
			constructor16=constructor();
			state._fsp--;

			stream_constructor.add(constructor16.getTree());
			// Grammaire.g:18:54: ( methode )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==58) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// Grammaire.g:18:54: methode
					{
					pushFollow(FOLLOW_methode_in_classBlock215);
					methode17=methode();
					state._fsp--;

					stream_methode.add(methode17.getTree());
					}
					break;

				default :
					break loop7;
				}
			}

			char_literal18=(Token)match(input,72,FOLLOW_72_in_classBlock218);  
			stream_72.add(char_literal18);

			// AST REWRITE
			// elements: constructor, methode, affect, variableClasse
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 18:67: -> ^( CLASSBLOCK constructor ( variableClasse )* ( methode )* ( affect )* )
			{
				// Grammaire.g:18:70: ^( CLASSBLOCK constructor ( variableClasse )* ( methode )* ( affect )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSBLOCK, "CLASSBLOCK"), root_1);
				adaptor.addChild(root_1, stream_constructor.nextTree());
				// Grammaire.g:18:95: ( variableClasse )*
				while ( stream_variableClasse.hasNext() ) {
					adaptor.addChild(root_1, stream_variableClasse.nextTree());
				}
				stream_variableClasse.reset();

				// Grammaire.g:18:111: ( methode )*
				while ( stream_methode.hasNext() ) {
					adaptor.addChild(root_1, stream_methode.nextTree());
				}
				stream_methode.reset();

				// Grammaire.g:18:120: ( affect )*
				while ( stream_affect.hasNext() ) {
					adaptor.addChild(root_1, stream_affect.nextTree());
				}
				stream_affect.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "classBlock"


	public static class constructor_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "constructor"
	// Grammaire.g:21:1: constructor : 'def' name= CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( ':' superc= CLASSID '(' ( condExpr ( ',' condExpr )* )? ')' )? 'is' block -> ^( CONSTRUCTOR $name ( $superc)? ( formalParam )* ( condExpr )* block ) ;
	public final GrammaireParser.constructor_return constructor() throws RecognitionException {
		GrammaireParser.constructor_return retval = new GrammaireParser.constructor_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token name=null;
		Token superc=null;
		Token string_literal19=null;
		Token char_literal20=null;
		Token char_literal22=null;
		Token char_literal24=null;
		Token char_literal25=null;
		Token char_literal26=null;
		Token char_literal28=null;
		Token char_literal30=null;
		Token string_literal31=null;
		ParserRuleReturnScope formalParam21 =null;
		ParserRuleReturnScope formalParam23 =null;
		ParserRuleReturnScope condExpr27 =null;
		ParserRuleReturnScope condExpr29 =null;
		ParserRuleReturnScope block32 =null;

		Object name_tree=null;
		Object superc_tree=null;
		Object string_literal19_tree=null;
		Object char_literal20_tree=null;
		Object char_literal22_tree=null;
		Object char_literal24_tree=null;
		Object char_literal25_tree=null;
		Object char_literal26_tree=null;
		Object char_literal28_tree=null;
		Object char_literal30_tree=null;
		Object string_literal31_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_58=new RewriteRuleTokenStream(adaptor,"token 58");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleTokenStream stream_CLASSID=new RewriteRuleTokenStream(adaptor,"token CLASSID");
		RewriteRuleSubtreeStream stream_formalParam=new RewriteRuleSubtreeStream(adaptor,"rule formalParam");
		RewriteRuleSubtreeStream stream_condExpr=new RewriteRuleSubtreeStream(adaptor,"rule condExpr");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
